integration_test/manifests/backend/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: connection-manager-ui
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        backend:
          serviceName: connection-manager-ui
          servicePort: http
      - path: /connection-manager-api(/|$)(.*)
        backend:
          serviceName: connection-manager-api
          servicePort: 3001
